force-app/main/default/objects/ExpoBannerImage__c/ExpoBannerImage__c.object-meta.xml
<CustomObject>
    <label>ExpoBannerImage</label>
    <nameField>
        <label>More Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpoBannerImages</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>