force-app/main/default/objects/ExpoBannerImage__c/fields/ExpoId__c.field-meta.xml
<CustomField>
    <fullName>ExpoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expo Id</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>ExpoBannerImages</relationshipLabel>
    <relationshipName>ExpoBannerImages</relationshipName>
    <type>Lookup</type>
</CustomField>