force-app/main/default/objects/ExpoBannerImage__c/fields/Lan__c.field-meta.xml
<CustomField>
    <fullName>Lan__c</fullName>
    <label>Lan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>cn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>