force-app/main/default/objects/ExpoBannerImage__c/fields/MoreLink__c.field-meta.xml
<CustomField>
    <fullName>MoreLink__c</fullName>
    <formula>Name</formula>
    <label>More Link Invisible</label>
    <type>Text</type>
</CustomField>