force-app/main/default/objects/ExpoBannerImage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lan__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CoverImgFileType__c</columns>
    <columns>CoverImgContentBodyId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>